# lejepa-rides-a-bike

./: README.md  goal.md  it-takes-two-neurons-to-ride-a-bicycle-theory.md  le-world-model.md  pyproject.toml  requirements.txt  train.py  verify_steer.py
.devcontainer/: Dockerfile  devcontainer.json
bike/: __init__.py  cem.py  dynamics.py  environment.py  metrics.py  models.py  state.py  visualization.py
debug/: check_heading_dot.py  check_heading_dot_source.py  diagnose_heading_zero.py  heading_row_contributions.py  trace_manual.py
evaluate/: evaluate.py  evaluate_cem.py  evaluate_hidden_state.py  evaluate_model.py  evaluate_model_variance.py  evaluate_physics.py  evaluate_plan.py  evaluate_start.py  evaluate_traj.py  evaluate_traj2.py  evaluate_traj3.py  evaluate_traj4.py  list_outputs.py  sample_policy_video.py
results/data/: model_1_eval_rollouts.npz
results/metrics/: all_models_summary.json  model_1_summary.json
results/model_1/: checkpoint.pt  heldout_pred_mse.json  loss_history.json
test/: test_manual.py  test_position.py  test_position2.py  test_scaling.py  test_scaling3.py
